# excel-chatbot

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
agent/: __init__.py  executor.py  intent_utils.py  multi_executor.py  multi_response_formatter.py  multi_router.py  op_registry.py  presentation.py  response_formatter.py  router.py  tools.py
core/: __init__.py  budget_table_normalizer.py  column_resolver.py  dataset_builder.py  derived_metrics.py  multi_loader.py  op_spec.py  operations.py  profiler.py  reader.py  sandbox_child.py  sandbox_runner.py  table_operations.py  trace.py  verification.py  workspace.py  workspace_loader.py  writer.py
deploy/: excel-chatbot-trace-cleanup.service  excel-chatbot-trace-cleanup.timer  excel-chatbot.service  install.sh  smoke_test.sh
docs/: DEPLOYMENT.md  EVALUATION.md  EXTENDING.md
domains/: __init__.py  base.py  budget_comparison.py  generic.py  registry.py
evals/: golden_queries.yaml  make_fixtures.py  run_evals.py
fixtures/: sales_by_dept.xlsx  sales_sample.xlsx
llm/: __init__.py  client.py  codegen.py  intent.py  providers.py  response.py
tests/: conftest.py  test_adaptive.py  test_agent.py  test_budget_normalizer.py  test_context_chaining.py  test_derive.py  test_domains.py  test_evals_smoke.py  test_executor.py  test_multi_file.py  test_operations.py  test_pipeline_validation.py  test_providers.py  test_response_formatter.py  test_sandbox.py  test_trace.py  test_ui_provider_label.py  test_verification.py  test_workspace.py
traces/: traces_20260708.jsonl
ui/: app.py
(+3 files in other folders)
